--- a/CoreDataSample/UI/Base.lproj/Main.storyboard
+++ b/CoreDataSample/UI/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                     <navigationItem key="navigationItem" id="tHQ-y7-kDd">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="pC7-u2-Scl">
                             <connections>
-                                <segue destination="Xm1-AP-5wR" kind="show" id="5UF-RT-BdY"/>
+                                <segue destination="Xm1-AP-5wR" kind="showDetail" identifier="MySegueId" id="5UF-RT-BdY"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -63,12 +63,12 @@
             <objects>
                 <viewController id="Xm1-AP-5wR" customClass="AddTodoViewController" customModule="CoreDataSample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Fb0-IW-SjR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tSs-6Q-vcf">
-                                <rect key="frame" x="0.0" y="88" width="414" height="321"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <rect key="frame" x="0.0" y="120" width="414" height="321"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="321" id="XVF-E9-rNh"/>
                                 </constraints>
@@ -76,21 +76,31 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wgb-vJ-SZ2">
+                                <rect key="frame" x="353" y="10" width="37" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="37" id="oVU-mL-r8r"/>
+                                    <constraint firstAttribute="height" constant="30" id="tc9-FY-awP"/>
+                                </constraints>
+                                <state key="normal" title="Done"/>
+                                <connections>
+                                    <action selector="saveTodo:" destination="Xm1-AP-5wR" eventType="touchUpInside" id="9m7-MC-gbV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="tSs-6Q-vcf" firstAttribute="top" secondItem="UM0-go-T0m" secondAttribute="top" id="CjO-Uu-1MK"/>
                             <constraint firstItem="tSs-6Q-vcf" firstAttribute="leading" secondItem="UM0-go-T0m" secondAttribute="leading" id="Pul-WX-kzi"/>
+                            <constraint firstItem="UM0-go-T0m" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Wgb-vJ-SZ2" secondAttribute="trailing" id="QSy-rn-JDQ"/>
+                            <constraint firstItem="tSs-6Q-vcf" firstAttribute="top" secondItem="UM0-go-T0m" secondAttribute="top" constant="120" id="SMg-xM-epP"/>
                             <constraint firstItem="tSs-6Q-vcf" firstAttribute="trailing" secondItem="UM0-go-T0m" secondAttribute="trailing" id="WN9-ax-dZo"/>
+                            <constraint firstItem="Wgb-vJ-SZ2" firstAttribute="top" secondItem="UM0-go-T0m" secondAttribute="top" constant="10" id="XWd-QW-yl3"/>
+                            <constraint firstItem="Wgb-vJ-SZ2" firstAttribute="leading" secondItem="UM0-go-T0m" secondAttribute="leading" constant="353" id="dTg-Gi-usV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="UM0-go-T0m"/>
                     </view>
                     <navigationItem key="navigationItem" id="LYd-52-a6Q">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="CmH-aM-me8">
-                            <connections>
-                                <action selector="saveTodo:" destination="Xm1-AP-5wR" id="2vV-jy-uJa"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="CmH-aM-me8"/>
                     </navigationItem>
                     <connections>
                         <outlet property="textViewTodo" destination="tSs-6Q-vcf" id="cCw-pz-W4V"/>
